# vault-watch

./: Cargo.toml  LICENSE  MANUAL.md  Makefile  Manual.md  README.md  brief.md
.agents/skills/linux-disk-monitoring-rust/: SKILL.md
.agents/skills/linux-md-raid-monitoring-rust/: SKILL.md
.agents/skills/linux-usb-removable-storage-rust/: SKILL.md
.agents/skills/native-nvme-health-rust/: SKILL.md
.agents/skills/native-sas-scsi-health-rust/: SKILL.md
.agents/skills/native-sata-ata-health-rust/: SKILL.md
.agents/skills/semantic-versioning/: SKILL.md
.agents/skills/universal-linux-storage-monitoring-rust/: SKILL.md
contrib/: config.example.toml  vault-watch.openrc  vault-watch.service
docs/: changelog.md  index.md
docs/agile/: 01-product-backlog.md  02-sprint-planning.md
docs/agile/bug-fixes/: BUG-2026-07-11-real-storage-inventory.md
docs/agile/sprint-backlogs/: sprint-01.md  sprint-02.md  sprint-03.md  sprint-04.md  sprint-05.md  sprint-06.md  sprint-07.md  sprint-08.md  sprint-09.md  sprint-10.md  sprint-10a.md  sprint-10b.md  sprint-10c.md  sprint-10d.md  sprint-10e.md  sprint-10f.md  sprint-10g.md  sprint-10h.md
docs/agile/user-stories/: US-MON-01.md  US-MON-02.md  US-MON-03.md  US-MON-04.md  US-MON-05.md  US-MON-06.md  US-MON-07.md  US-MON-08.md  US-MON-09.md  US-MON-10.md  US-MON-11.md  US-MON-12.md  US-MON-13.md  US-MON-14.md  US-MON-15.md  US-MON-16.md  US-MON-17.md  US-MON-18.md  US-MON-19.md  US-MON-20.md  US-MON-21.md  US-MON-22.md  (+16 more)
docs/software/: 00-architecture.md  01-system-design.md  02-security-threat-model.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: ata_pages.rs  ata_return_descriptor.rs  ata_vendor_schema.rs  broker_wire.rs  scsi_pages.rs  scsi_sense_completion.rs
src/: app.rs  broker.rs  config.rs  lib.rs  main.rs  notifier.rs  security.rs  ui.rs
src/ata/: mod.rs
src/broker/: capability.rs  client.rs  device.rs  response.rs  server.rs  unix.rs  wire.rs
src/collectors/: broker_health.rs  diskstats.rs  iostat.rs  md_sysfs.rs  mod.rs  raid.rs  smart.rs
src/scsi/: mapping.rs  mod.rs  sg_uapi.rs  worker.rs
src/storage/: discovery.rs  events.rs  mod.rs  model.rs
src/widgets/: disk_table.rs  error_screen.rs  graph_view.rs  mod.rs  raid_panel.rs  scroll.rs  smart_details.rs  sparkline_cell.rs  topology_view.rs
(+14 files in other folders)
