[package]
name = "vault-watch"
version = "0.39.0"
edition = "2024"
default-run = "vault-watch"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
regex = "1"
futures = "0.3"
chrono = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
toml = "0.8"
libc = "0.2"
