[package]
name = "vault-watch-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
vault-watch = { path = ".." }

[[bin]]
name = "scsi_pages"
path = "fuzz_targets/scsi_pages.rs"
test = false
doc = false
bench = false

[[bin]]
name = "scsi_sense_completion"
path = "fuzz_targets/scsi_sense_completion.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ata_pages"
path = "fuzz_targets/ata_pages.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ata_return_descriptor"
path = "fuzz_targets/ata_return_descriptor.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ata_vendor_schema"
path = "fuzz_targets/ata_vendor_schema.rs"
test = false
doc = false
bench = false

[[bin]]
name = "broker_wire"
path = "fuzz_targets/broker_wire.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
